cluster-talos/kubernetes/apps/prowlarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    k10.kasten.io/backup: "true"
